--- a/style.css
+++ b/style.css
@@ -5,15 +5,17 @@
 }
 nav{
     margin-top: 3%;
-    margin-left: 5%;
+    margin-left: 0;
 }
 h3{
     position: absolute;
-    font-size: 40px;
+    font-size: 45px;
     margin-left: 5%;
+    top: 23px;
 }
 nav ul{
-    margin-left: 47%;
+    margin-left: 54%;
+    transform: translateY(-14px);
 }
 nav ul li{
     display: inline-block;
@@ -26,9 +28,9 @@ nav ul li a{
     font-size: 18px;
 }
 .icons{
-    margin-left: 75%;
+    margin-left: 80%;
     position: absolute;
-    top: 34px;
+    top: 38px;
 }
 .bell{
     width: 25px;
@@ -102,7 +104,7 @@ margin-left: 20px;
     nav ul{
         position: absolute;
         right: 60px;
-        top: 50px;
+        top: 80px;
     }
     nav ul li{
         display: block;
@@ -122,6 +124,7 @@ margin-left: 20px;
         right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 0.8s;
     }
     .col-1{
         position: absolute;
@@ -149,5 +152,17 @@ margin-left: 20px;
     }
     nav h3{
         display: none;
+    }
+    .fa.fa-times{
+        color: #fff;
+        font-size: 26px;
+        margin-left: 5%;
+        margin-top: 6%;
+    }
+    .fa.fa-bars{
+        color: #f14a60;
+        font-size: 26px;
+        position: absolute;
+        right: 32px;
     }
 }
